--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "flickity": "^2.3.0",
     "formik": "^2.2.9",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-flickity-component": "^4.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/flickity": "^2.2.7",
     "@types/styled-components": "^5.1.26"
   },
   "proxy": "http://localhost:5001"
